# gdeltPyR

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGES  MANIFEST.in  README.md  README.rst  _config.yml  appveyor.yml  environment2.yml  environment3.yml  pyproject.toml  requirements.txt  requirements_geo.txt  setup.cfg  setup.py
_includes/: analytics.html
data/: cameoCodes.json  events1.csv  events2.csv  events2Transsamp.pkl.compress  events2listsamp.pkl.compress  events2samp.pkl.compress  events2samps.csv  gdv2events.pkl  gkg1.csv  gkg2.csv  iatv.csv  mentions.csv  mentionsTranssamp.pkl.compress  mentionslistsamp.pkl.compress  mentionssamp.csv  mentionssamp.pkl.compress  visualgkg.csv
docs/: Makefile  make.bat
examples/: Basic gdeltPyR Query.ipynb  cameoCodeCleanup.md  gdeltPyR_basic_use.md
gdelt/: __init__.py  base.py  dateFuncs.py  dateInputCheck.py  extractors.py  filters.py  getHeaders.py  helpers.py  inputChecks.py  multipdf.py  parallel.py  vectorizingFuncs.py
gdelt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebook/: CSV.header.fieldids.xlsx  Untitled.ipynb  earlyConceptsnFunctionality.ipynb  earlyConceptsnFunctionality.md
tests/: constants.py  test_basevalues.py  test_dateFormatter.py  test_dateRanger.py  test_dateinputs.py  test_gdeltRangeString.py  test_headers.py  test_helpers.py  test_info.py  test_multidf.py  test_parallel.py  test_parse_date.py  test_response.py  test_search.py  test_urlBuilder.py  test_vectorizing.py  testresponse.py
travis/: 27-latest-conda-forge.yml  35-defaults.yml  35-latest-conda-forge.yml  36-defaults.yml  36-latest-conda-forge.yml  37-defaults.yml  37-latest-conda-forge.yml  38-defaults.yml  38-latest-conda-forge.yml  39-defaults.yml  39-latest-conda-forge.yml  install.sh  requirements_all.txt  (+1 more)
(+38 files in other folders)
