[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"





[project]
dependencies = ['numpy>=1.11.1', 'pandas>=0.23', 'requests>=2.31.0', 'python-dateutil>=2.8.2']
name = "gdelt"
authors = [
    {name = "Linwood Creekmore", email = "valinvescap@gmail.com"},
]
version = "0.1.12"
description = "Python-based framework to access and analyze Global Database of Events, Language, and Tone (GDELT) 1.0 or 2.0 data in a Python Pandas or R dataframe"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
keywords=["gdelt", "pandas", "tidy", "data", "api","python","news","geolocated"]
classifiers=[
        "Development Status :: 3 - Alpha",
        'Intended Audience :: Science/Research',
        'Operating System :: OS Independent',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: Communications :: Chat',
        'Topic :: Internet',
        'Topic :: Scientific/Engineering :: Information Analysis',
        'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.4',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6'
    ]



[tool.gdelt.packages.find]
where = ["data"]

[tool.gdelt.package-data]
"*"= ["*.gz", "*.csv","*.zip","*.json","*.compress"]

[tool.gdelt.extras]
geoSpatial= ["fiona>=1.6", "shapely>=1.5", "geopandas>1.7","CHANGES","LICENSE","README.md"]

[project.urls]
"Homepage" = "https://linwoodc3.github.io/gdeltPyR/"
"Bug Tracker" = "https://github.com/linwoodc3/gdeltPyR/issues"